syntax = "proto3";

package services.model;

message UserProject {
  int32 id = 1;
  int32 userId = 2;
  int32 projectId = 3;
  string createTime = 4;
  string updateTime = 5;
  bool isDelete = 6;
  string appName = 7;
}